--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Digital Magasin Website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href="https://placehold.co/600x300" as="image" type="image/svg+xml">
     <link rel="stylesheet" href="./css/main.css" />
@@ -35,7 +36,7 @@
             <!-- Header IMG -->
             <section>
                 <figure class="header-img" aria-label="te">
-                    <img src="https://placehold.co/600x300" alt="">
+                    <img src="https://placehold.co/600x300" alt="Placeholder picture">
                     <!-- <figcaption>Billede :D</figcaption> -->
                 </figure>
             </section>
@@ -49,21 +50,21 @@
                 <div class="card-list">
                     <div class="card">
                         <figure>
-                            <img src="https://placehold.co/600x300" alt="">
+                            <img src="https://placehold.co/600x300" alt="Placeholder picture">
                             <figcaption>Lorem Ipsum</figcaption>
                         </figure>
                         <div>
-                            <h3>Overskrift</h3>
+                            <h2>Overskrift</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non maiores, commodi odio deserunt voluptates repellendus nobis qui tempora accusamus culpa ut eius, iste, aliquam quaerat eligendi. Doloribus modi est sapiente.</p>
                         </div>
                     </div>
                     <div class="card">
                         <figure>
-                            <img src="https://placehold.co/600x300" alt="">
+                            <img src="https://placehold.co/600x300" alt="Placeholder picture">
                             <figcaption>Lorem Ipsum</figcaption>
                         </figure>
                         <div>
-                            <h3>Overskrift</h3>
+                            <h2>Overskrift</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta architecto aliquam officia, veritatis voluptatem facere repudiandae fugiat a nesciunt, perspiciatis omnis obcaecati deserunt repellendus expedita distinctio quaerat ut iusto assumenda?</p>
                         </div>
                     </div>
@@ -79,7 +80,7 @@
             <div class="side-card"></div>
             <div class="side-card"></div>
             <div class="side-card">
-                <h5>Til nyhedsbrev</h5>
+                <h2>Til nyhedsbrev</h2>
                 <form>
                     <input type="email" placeholder="Email">
                     <input type="submit" value="Tilmeld">
